--- a/themes/hugo-universal-theme/layouts/partials/head.html
+++ b/themes/hugo-universal-theme/layouts/partials/head.html
@@ -69,16 +69,19 @@
 
 
 
-  {{ if not site.IsServer }}
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  {{ with .Site.Params.googleAnalytics }}
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', '{{ . }}');
-  </script>
+  {{ if site.GoogleAnalytics }}
+    <script>
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        ga('create', '{{ site.GoogleAnalytics }}', 'auto');
+        {{ if site.Params.privacy_pack }}ga('set', 'anonymizeIp', true);{{ end }}
+        ga('require', 'eventTracker');
+        ga('require', 'outboundLinkTracker');
+        ga('require', 'urlChangeTracker');
+        ga('send', 'pageview');
+    </script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
   {{ end }}
-  {{ end }}
+
 </head>
