--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -72,7 +72,7 @@ _________________________________________________________ -->
 <div id="copyright">
     <div class="container">
         <div class="col-md-12">
-            <p class="pull-left">{{ getenv "BUILD_TIME" }}</p>
+
             {{ if isset .Site.Params "copyright" }}
             <p class="pull-left">{{ .Site.Params.copyright | safeHTML }}</p>
             {{ end }}
@@ -80,7 +80,9 @@ _________________________________________________________ -->
               {{ i18n "templateBy" }} <a href="http://bootstrapious.com/free-templates">Bootstrapious</a>.
               <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) -->
 
-              {{ i18n "portedBy" }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>
+              {{ i18n "portedBy" }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>.
+
+                Last update: {{ getenv "BUILD_TIME" }}
             </p>
         </div>
     </div>
