--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -82,7 +82,7 @@ _________________________________________________________ -->
 
               {{ i18n "portedBy" }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>.
 
-                Last update: {{ getenv "BUILD_TIME" }}
+                Released: {{ getenv "BUILD_TIME" }}
             </p>
         </div>
     </div>
